overlap de las tarjetas en los creditos fix

--- a/docs/css/estilo.css
+++ b/docs/css/estilo.css
@@ -182,6 +182,7 @@ footer a:hover {
   display: flex;
   flex-wrap: wrap;
   gap: 5%;
+  row-gap: 10px;
   justify-content: center;
   padding: 20px;
 }
